Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -543,16 +542,146 @@
         "\n",
         "1. 두 전자의 momentum이 반대일 경우, 총 momentum의 합이 0이 되므로 두 입자의 총 에너지는 ground state에 가깝게 된다.  \n",
         "\n",
-        "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다.[^MFYS]\n",
+        "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다.[^MFYS][^Margin]  \n",
+        "    ![https://imgur.com/a/zGBsvRN](https://i.imgur.com/VsrPwCU.png)  \n",
+        "    **그림\u0003**  \n",
+        "    두 전자의 위치 correlation  \n",
+        "    전자가 움직일 때 같은 spin의 전자는 그 위치에 존재할 수 없다.  \n",
+        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett]\n",
+        "\n",
+        "Fermi level위에 두 전자의 wavefunction을 무게 중심 $\\mathbf R_\\text{cm}=({\\bf r_1+r_2})/2$으로 분리하면 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "|\\mathbf r_1\\sigma_1, \\mathbf r_2\\sigma2⟩\n",
+        "= e^{-i\\mathbf k_\\text{cm}\\cdot\\mathbf R_\\text{cm}}\\varphi({\\bf r_1-r_2})|\\sigma_1\\sigma_2\\rangle\n",
+        "$$ \n",
+        "\n",
+        "두 전자의 총 momentum은 0일 경우 에너지가 최소가 된다. 따라서 ground state에서는 $\\mathbf k_\\text{cm}=0$ 이다. \n",
+        "\n",
+        "Spin wavefunction은 spin singlet (S = 0)이거나,\n",
+        "$$\n",
+        "|\\sigma_1\\sigma_2\\rangle = {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle - \\left|\\downarrow\\uparrow\\right\\rangle) \n",
+        "$$\n",
+        "spin triplet(S=1)이다. \n",
+        "$$\n",
+        "|\\sigma_1\\sigma_2\\rangle =  \\begin{cases}\n",
+        " \\left|\\uparrow\\uparrow\\right\\rangle \\\\ \n",
+        " {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle + \\left|\\downarrow\\uparrow\\right\\rangle) \\\\\n",
+        "\\left|\\downarrow\\downarrow\\right\\rangle\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "BCS theory에서는 spin singlet을 가정한다.  \n",
+        "전자의 fermion 조건으로부터,\n",
+        "$$\n",
+        "|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle =\n",
+        "- |\\mathbf r_2\\sigma_2,\\mathbf r_1\\sigma_1\\rangle\n",
+        "$$ \n",
+        "\n",
+        "spin이 singlet(antisymmetry)일 경우, 위치는 symmetry가 되어서 더 낮은 ground state energy를 갖기 때문이다.  \n",
+        "\n",
+        "$$\n",
+        "\\varphi(\\mathbf r_1-\\mathbf r_2) = \\varphi(\\mathbf r_2-\\mathbf r_1)\n",
+        "$$\n",
+        "\n",
+        "이것을 Fourier 변환하면 다음과 같다.  \n",
+        "\n",
+        "$$\n",
+        "\\varphi(\\mathbf r_1-\\mathbf r_2) =\n",
+        "\\sum_{\\bf k}\\varphi_\\mathbf k e^{i\\mathbf k(\\mathbf r_1-\\mathbf r_2)}\n",
+        "$$\n",
+        "$\\varphi(\\mathbf r)$가 even이므로 $\\varphi_\\mathbf k = \\varphi_{-\\mathbf k}$ 이다.   \n",
+        "Fermi sea는 모두 가득차 있는 것을 가정하므로, 이 때의 합계에는 $|\\mathbf k| > k_F$의 조건이 있다.  \n",
+        "(수식에서는 이 조건을 편의상 생략한다.)  \n",
+        "\n",
+        "여기서 $\\psi_\\mathbf k(\\mathbf r) \\equiv e^{i\\bf k\\cdot r}/\\sqrt 2$ 로 정의하면, 전체의 pair wavefunction은 다음과 같다.  \n",
+        "$$\n",
+        "|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = \n",
+        "\\sum_{\\bf k} \\varphi_\\mathbf k |\\mathbf k\\rangle\\\\\n",
+        "|\\mathbf k\\rangle \\equiv\n",
+        "\\begin{vmatrix}\n",
+        "\\psi_{\\bf k\\uparrow}(\\mathbf r_1) & \\psi_{\\bf k\\downarrow}(\\mathbf r_2)\\\\ \n",
+        "\\psi_{-\\bf k\\uparrow}(\\mathbf r_1) & \\psi_{-\\bf k\\downarrow}(\\mathbf r_2)\n",
+        "\\end{vmatrix}\n",
+        "$$\n",
+        "\n",
+        "두 electron의 $\\mathbf k$는 Fermi surface근처에 있으므로, Effective potential을 다음과 같이 근사한다.\n",
+        "$$\n",
+        "V_{\\text {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
+        "{\\omega_D\\over\n",
+        "(E_{\\mathbf k'}-E_{\\bf k'-q})^2-\\omega^2_D} \\approx -g^2\n",
+        "$$\n",
+        "\n",
+        "그러면 Frohlich Hamiltonian에서 free phonon을 뺀 Hamiltonian은 다음과 같다. (spin sum 생략)  \n",
+        "\n",
+        "$$\n",
+        "H = H_{e}+H_{e-ph}\\\\\n",
+        "=\\sum_{\\bf k}\\epsilon_{\\bf k}c^\\dagger_{\\bf k}c_{\\bf k}\n",
+        "-g^2\\sum_{\\bf k,k',q}\n",
+        "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
+        "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\n",
+        "$$\n",
+        " \n",
+        "$|\\mathbf k\\rangle$는 $H|\\mathbf k\\rangle=E|\\mathbf k\\rangle$의 Scrhodinger 방정식을 만족한다.  \n",
+        "\n",
+        "$$\n",
+        "\\langle\\mathbf k| H|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = \n",
+        "E\\varphi_\\mathbf k\n",
+        "=2\\epsilon_\\mathbf k\\varphi_\\mathbf k - g^2\\sum_{\\bf k'}\\varphi_{\\mathbf k'}\n",
+        "\\tag{6.18}\n",
+        "$$\n",
+        "\n",
+        "2는 $\\epsilon_{-\\mathbf k}, \\epsilon_\\mathbf k$의 두 항에서 $\\epsilon_{-\\mathbf k}=\\epsilon_\\mathbf k$를 이용하여 산출된다. \n",
+        "식 (6.18)을 $\\varphi_\\mathbf k$에 대해 풀면 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "\\varphi_\\mathbf k = -\\left(\\sum_{\\bf k'}\\varphi_{\\bf k'}\\right){g^2\\over E-2\\epsilon_\\mathbf k}\n",
+        "$$\n",
+        "\n",
+        "양변을 $\\bf k$에 대해 합계를 취하면 다음과 같다.  \n",
+        "\n",
+        "$$\n",
+        "\\sum_\\mathbf k\\varphi_\\mathbf k = -\\left(\\sum_{\\bf k'}\\varphi_{\\bf k'}\\right)\\sum_\\mathbf k{g^2\\over E-2\\epsilon_\\mathbf k}\n",
+        "$$\n",
+        "즉,\n",
+        "$$\n",
+        "1 = -\\sum_\\mathbf k{g^2\\over E-2\\epsilon_\\mathbf k}.\n",
+        "$$\n",
+        "\n",
+        "$\\mathbf k$에 대한 합계를 density of states에 대한 적분으로 변환하면 다음과 같다.  \n",
+        "\n",
+        "$$\n",
+        "1= -g^2g(\\epsilon_F)\\int_0^{\\hbar\\omega_D}d\\epsilon{1\\over E-2\\epsilon}\n",
+        "$$ \n",
+        "\n",
+        "$\\epsilon$을 0부터 적분하는 이유는, $\\epsilon_\\mathbf k$를 Fermi energy $\\epsilon_F$와의 차이만큼만 계산하기 때문이다.   \n",
+        "적분을 수행하고 이것을 E에 대해 풀면 다음과 같다.  \n",
+        "$$\n",
+        "E = -2\\hbar\\omega_De^{-1/\\lambda}\n",
+        "$$\n",
+        "\n",
+        "여기서 $\\lambda$는 electron-phonon coupling parameter라고 불리며 다음과 같이 정의된다.\n",
+        "\n",
+        "$$\n",
+        "\\lambda \\equiv g^2g(\\epsilon_F)\n",
+        "$$\n",
+        "\n",
+        "$\\lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  이것은 Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.  \n",
+        "\n",
+        "흥미로운 것은 아무리 interaction이 적더라도 에너지는 음수이므로 bound state가 존재한다는 것이다. 이것을 Cooper problem 혹은 Cooper instability라고 부른다.  \n",
+        "\n",
+        "이것은 통상적으로는 볼 수 없는 이상한 현상이다. 왜냐하면 interaction이 없는 두 자유전자의 에너지는 $2\\epsilon_\\mathbf k + 2\\epsilon_F$인데, 두 interacting 전자의 ground state 에너지는 $E + 2\\epsilon_F < 2\\epsilon_F $이기 때문이다. 아무리 interaction이 적더라도, $2\\epsilon_\\mathbf k$ 만큼의 에너지 저하가 일어났다고 볼 수 있다.  \n",
         "\n",
         "\n",
         "\n",
-        "A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.[^Margin]\n",
         "\n",
-        "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics\n",
+        "\n",
+        "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics  \n",
         "    Finally, remember that the exchange hole weakens the  interactions. We already encountered this in the chapter on electrons and phonons, studying the effects of electron-electron interactions. These exchange interactions will also in the present case weaken the glue between electrons, but they are only present between electrons with the same spin. So, the attraction will be strongest if the electrons not only have opposite momentum, but also opposite spin.\n",
         "\n",
-        "[^Margin]: Superconductivity An introduction - Mangin, Kahn"
+        "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
+        "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
+        "\n",
+        "[^Annet]: Superconductivity, Superfluids, and Condensates - Annett"
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
