Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -665,7 +665,9 @@
         "\\lambda \\equiv g^2g(\\epsilon_F)\n",
         "$$\n",
         "\n",
-        "$\\lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  이것은 Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.  \n",
+        "$\\lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  \n",
+        "\n",
+        "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett]  \n",
         "\n",
         "흥미로운 것은 아무리 interaction이 적더라도 에너지는 음수이므로 bound state가 존재한다는 것이다. 이것을 Cooper problem 혹은 Cooper instability라고 부른다.  \n",
         "\n",
@@ -681,7 +683,7 @@
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
         "\n",
-        "[^Annet]: Superconductivity, Superfluids, and Condensates - Annett"
+        "[^Annett]: Superconductivity, Superfluids, and Condensates - Annett"
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
