Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -559,12 +559,10 @@
         "두 전자의 총 momentum은 0일 경우 에너지가 최소가 된다. 따라서 ground state에서는 $\\mathbf k_\\text{cm}=0$ 이다. \n",
         "\n",
         "Spin wavefunction은 spin singlet (S = 0)이거나,\n",
-        "$$\n",
-        "|\\sigma_1\\sigma_2\\rangle = {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle - \\left|\\downarrow\\uparrow\\right\\rangle) \n",
+        "$$|\\sigma_1\\sigma_2\\rangle = {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle - \\left|\\downarrow\\uparrow\\right\\rangle) \n",
         "$$\n",
         "spin triplet(S=1)이다. \n",
-        "$$\n",
-        "|\\sigma_1\\sigma_2\\rangle =  \\begin{cases}\n",
+        "$$|\\sigma_1\\sigma_2\\rangle =  \\begin{cases}\n",
         " \\left|\\uparrow\\uparrow\\right\\rangle \\\\ \n",
         " {1\\over\\sqrt 2}(\\left|\\uparrow\\downarrow\\right\\rangle + \\left|\\downarrow\\uparrow\\right\\rangle) \\\\\n",
         "\\left|\\downarrow\\downarrow\\right\\rangle\n",
@@ -572,9 +570,7 @@
         "$$\n",
         "BCS theory에서는 spin singlet을 가정한다.  \n",
         "전자의 fermion 조건으로부터,\n",
-        "$$\n",
-        "|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle =\n",
-        "- |\\mathbf r_2\\sigma_2,\\mathbf r_1\\sigma_1\\rangle\n",
+        "$$|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = -|\\mathbf r_2\\sigma_2,\\mathbf r_1\\sigma_1\\rangle\n",
         "$$ \n",
         "\n",
         "spin이 singlet(antisymmetry)일 경우, 위치는 symmetry가 되어서 더 낮은 ground state energy를 갖기 때문이다.  \n",
