Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -547,7 +547,7 @@
         "    **그림\u0003**  \n",
         "    두 전자의 위치 correlation  \n",
         "    전자가 움직일 때 같은 spin의 전자는 그 위치에 존재할 수 없다.  \n",
-        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett]\n",
+        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett][^Annett]\n",
         "\n",
         "Fermi level위에 두 전자의 wavefunction을 무게 중심 $\\mathbf R_\\text{cm}=({\\bf r_1+r_2})/2$으로 분리하면 다음과 같다.\n",
         "\n",
