--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -542,12 +542,12 @@
         "\n",
         "1. 두 전자의 momentum이 반대일 경우, 총 momentum의 합이 0이 되므로 두 입자의 총 에너지는 ground state에 가깝게 된다.  \n",
         "\n",
-        "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다.[^MFYS][^Margin]  \n",
+        "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다.[^MFYS]  [^Margin]  \n",
         "    ![https://imgur.com/a/zGBsvRN](https://i.imgur.com/VsrPwCU.png)  \n",
         "    **그림\u0003**  \n",
         "    두 전자의 위치 correlation  \n",
         "    전자가 움직일 때 같은 spin의 전자는 그 위치에 존재할 수 없다.  \n",
-        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett][^Annett]\n",
+        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett]\n",
         "\n",
         "Fermi level위에 두 전자의 wavefunction을 무게 중심 $\\mathbf R_\\text{cm}=({\\bf r_1+r_2})/2$으로 분리하면 다음과 같다.\n",
         "\n",
@@ -663,7 +663,7 @@
         "\n",
         "$\\lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  \n",
         "\n",
-        "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett]  \n",
+        "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett2]  \n",
         "\n",
         "흥미로운 것은 아무리 interaction이 적더라도 에너지는 음수이므로 bound state가 존재한다는 것이다. 이것을 Cooper problem 혹은 Cooper instability라고 부른다.  \n",
         "\n",
@@ -679,7 +679,7 @@
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
         "\n",
-        "[^Annett]: Superconductivity, Superfluids, and Condensates - Annett"
+        "[^Annett],[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett"
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
