Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -679,7 +679,8 @@
         "[^Margin]: Superconductivity An introduction - Mangin, Kahn  \n",
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
         "\n",
-        "[^Annett],[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett"
+        "[^Annett]: Superconductivity, Superfluids, and Condensates - Annett\n",
+        "[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett"
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
