--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -665,12 +665,9 @@
         "\n",
         "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett2]  \n",
         "\n",
-        "흥미로운 것은 아무리 interaction이 적더라도 에너지는 음수이므로 bound state가 존재한다는 것이다. 이것을 Cooper problem 혹은 Cooper instability라고 부른다.  \n",
+        "흥미로운 것은 아무리 interaction이 적더라도 에너지는 음수이므로 bound state가 존재한다는 것이다. 이것을 **Cooper problem** 이라고 부른다.  \n",
         "\n",
         "이것은 통상적으로는 볼 수 없는 이상한 현상이다. 왜냐하면 interaction이 없는 두 자유전자의 에너지는 $2\\epsilon_\\mathbf k + 2\\epsilon_F$인데, 두 interacting 전자의 ground state 에너지는 $E + 2\\epsilon_F < 2\\epsilon_F $이기 때문이다. 아무리 interaction이 적더라도, $2\\epsilon_\\mathbf k$ 만큼의 에너지 저하가 일어났다고 볼 수 있다.  \n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics  \n",
@@ -684,6 +681,109 @@
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# BCS Wave function\n",
+        "\n",
+        "Cooper problem으로부터 BCS는 전체 Fermi surface 부근에서 모든 전자가 bound state를 형성하는 unstability를 가진다는 것을 깨달았다.  \n",
+        "Effective attractive interaction은 Fermi surface의 모든 전자가 Cooper pair bound state가 된다.  \n",
+        "\n",
+        "다음 문제는 이러한 많은 전자를 기술하는 방법이었다.  \n",
+        "먼저,\n",
+        "$$\n",
+        "|\\mathbf r_1\\sigma_1,...,\\mathbf r_N\\sigma_N\\rangle =\n",
+        "{1\\over\\sqrt{N!}}\\sum_P(-1)^P\n",
+        "|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle\n",
+        "|\\mathbf r_3\\sigma_3,\\mathbf r_4\\sigma_4\\rangle\\cdots\n",
+        "|\\mathbf r_{N-1}\\sigma_{N-1},\\mathbf r_N\\sigma_N\\rangle\n",
+        "$$\n",
+        "\n",
+        "위와 같은 방식으로 시도한 것은 복잡함 때문에 쉽지 않았다.  \n",
+        "그 대신에 Schrieffer는 **coherent state**로 기술하는 방법을 택했다.  \n",
+        "\n",
+        "먼저 다음과 같은 Cooper pair creation operator를 정의한다.  \n",
+        "\n",
+        "$$ P^\\dagger_\\mathbf k\\equiv c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} $$\n",
+        "\n",
+        "그리고 이 operator에 의한 many-body coherent state를 다음과 같이 정의하였다.  \n",
+        "\n",
+        "$$ |\\Psi_\\text{BCS}\\rangle = \\prod_\\mathbf kC_\\mathbf k\\exp\\left(\\alpha_\\mathbf kP^\\dagger_\\mathbf k\\right)|0\\rangle $$\n",
+        "\n",
+        "여기서 $\\alpha_\\mathbf k$는 complex variable로서 향후에 energy를 minimize하는 조건을 통하여 찾게 될 것이다.  \n",
+        "\n",
+        "Pair operator는 Bose commutation 법칙을 만족하지 않지만,\n",
+        "$$ [P_{\\bf k}, P^\\dagger_{\\bf k}] \\neq 1 $$\n",
+        "동일한 operator끼리는 commute한다.  \n",
+        "$$[P^\\dagger_{\\bf k}, P^\\dagger_{\\bf k'}] =0 $$\n",
+        "또한, 동일 momentum 전자가 두 번 생성될 수 없으므로 ($c^\\dagger_kc^\\dagger_k=0$),\n",
+        "$$ (P^\\dagger_\\mathbf k)^2 = P^\\dagger_\\mathbf kP^\\dagger_\\mathbf k=0$$\n",
+        "이다. 이것을 이용하면 exponential이 간단해진다.  \n",
+        "$$\n",
+        "\\prod_\\mathbf k\\exp \\alpha_\\mathbf kP^\\dagger_\\mathbf k\n",
+        "=\\prod_\\mathbf k\\left(1+\\alpha_\\mathbf kP^\\dagger_\\mathbf k\\right)\n",
+        "$$  \n",
+        "Wave function을 normalize 하면,\n",
+        "$$ 1 = C_\\mathbf k^2\\langle0|\\left(1+\\alpha^*_\\mathbf kP_\\mathbf k\\right)\n",
+        "\\left(1+\\alpha_\\mathbf kP^\\dagger_\\mathbf k\\right)|0\\rangle=\n",
+        "C_\\mathbf k^2(1+|\\alpha_\\mathbf k|^2)\n",
+        "$$\n",
+        "\n",
+        "$C_\\mathbf k = \\sqrt{1+|\\alpha_\\mathbf k|^2}$를 얻을 수 있다. \n",
+        "다음과 같이 변수를 정의하면,  \n",
+        "$$\n",
+        "u_\\mathbf k = {1\\over\\sqrt{1+|\\alpha_\\mathbf k|^2}},\\quad\n",
+        "v_\\mathbf k = {\\alpha_\\mathbf k\\over\\sqrt{1+|\\alpha_\\mathbf k|^2}}\n",
+        "$$\n",
+        "Wave function은 다음과 같다.  \n",
+        "$$ |\\Psi_\\text{BCS}\\rangle = \\prod_\\mathbf k\n",
+        "\\left(u_\\mathbf k+v_\\mathbf kP^\\dagger_\\mathbf k\\right)\n",
+        "|0\\rangle $$\n",
+        "\n",
+        "이제 $v_\\mathbf k$의 의미를 알 수 있다.   \n",
+        "Spin up인 전자의 갯수를 구하면,\n",
+        "$$\n",
+        "\\begin{align*}\n",
+        "\\langle N_{\\bf k\\uparrow}\\rangle &= \n",
+        "\\langle \\Psi_\\text{BCS}|c^\\dagger_{\\bf k\\uparrow}c_{\\bf k\\uparrow}\n",
+        "|\\Psi_\\text{BCS} \\rangle\\\\\n",
+        "&= \\langle0|(u^*_\\mathbf k+v^*_\\mathbf k c_{-\\bf k\\downarrow} c_{\\bf k\\uparrow})\n",
+        "c^\\dagger_{\\bf k\\uparrow}c_{\\bf k\\uparrow}\n",
+        "(u_\\mathbf k+v_\\mathbf k c^\\dagger_{-\\bf k\\downarrow} c^\\dagger_{\\bf k\\uparrow}) |0\\rangle\\\\\n",
+        "&=\\langle0| v^*_\\mathbf k c_{-\\bf k\\downarrow} v_\\mathbf k c^\\dagger_{-\\bf k\\downarrow}|0\\rangle\\\\\n",
+        "&=|v_\\mathbf k|^2.\n",
+        "\\end{align*}\n",
+        "$$\n",
+        "마찬가지로, $\\langle N_{\\bf k\\downarrow}\\rangle = |v_\\mathbf k|^2$이다. \n",
+        "\n",
+        "따라서 총 전자의 수는 다음과 같다.  \n",
+        "$$\n",
+        "\\langle N\\rangle = 2 \\sum_\\mathbf k |v_\\mathbf k|^2\n",
+        "$$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CXDjJH_ARg5A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Mean Field Hamiltonian\n",
+        "\n",
+        "Cooper pair와 관련되어 있는 부분만을 추출하면 effective Hamiltonian은 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "H = \\sum_{\\bf k,\\sigma}\\epsilon_\\mathbf k c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}\n",
+        "-g^2\\sum_{\\bf k', k}\n",
+        "c^\\dagger_{\\bf k'\\uparrow}c^\\dagger_{-\\bf k'\\downarrow}\n",
+        "c_{\\bf k\\uparrow}c_{-\\bf k\\downarrow}\n",
+        "$$\n"
+      ],
+      "metadata": {
+        "id": "SMH70EFLRjzX"
       }
     },
     {
