Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -735,7 +735,8 @@
         "다음과 같이 변수를 정의하면,  \n",
         "$$\n",
         "u_\\mathbf k = {1\\over\\sqrt{1+|\\alpha_\\mathbf k|^2}},\\quad\n",
-        "v_\\mathbf k = {\\alpha_\\mathbf k\\over\\sqrt{1+|\\alpha_\\mathbf k|^2}}\n",
+        "v_\\mathbf k = {\\alpha_\\mathbf k\\over\\sqrt{1+|\\alpha_\\mathbf k|^2}}\\quad\n",
+        "\\left(|u_\\mathbf k|^2 + |v_\\mathbf k|^2 = 1\\right)\n",
         "$$\n",
         "Wave function은 다음과 같다.  \n",
         "$$ |\\Psi_\\text{BCS}\\rangle = \\prod_\\mathbf k\n",
@@ -780,7 +781,43 @@
         "-g^2\\sum_{\\bf k', k}\n",
         "c^\\dagger_{\\bf k'\\uparrow}c^\\dagger_{-\\bf k'\\downarrow}\n",
         "c_{\\bf k\\uparrow}c_{-\\bf k\\downarrow}\n",
-        "$$\n"
+        "$$\n",
+        "\n",
+        "BCS wave function의 에너지는 다음을 계산하면 된다.\n",
+        "\n",
+        "$$ E = \\langle\\Psi_\\text{BCS}|H|\\Psi_\\text{BCS}\\rangle $$\n",
+        "\n",
+        "첫번째 free field 항은 다음과 같다.\n",
+        "\n",
+        "$$\\sum_{\\bf k,\\sigma}\\epsilon_\\mathbf k\\langle c^\\dagger_{\\bf k\\sigma}\n",
+        "c_{\\bf k\\sigma}\\rangle = 2\\sum_\\mathbf k\\epsilon_\\mathbf k |v_\\mathbf k|^2 \n",
+        "$$\n",
+        "\n",
+        "두번째 interaction 항은 다음과 같다.  \n",
+        "$$\\langle\n",
+        "c^\\dagger_{\\bf k'\\uparrow}c^\\dagger_{-\\bf k'\\downarrow}\n",
+        "c_{\\bf k\\uparrow}c_{-\\bf k\\downarrow} \\rangle = \n",
+        "v^*_\\mathbf k v_{\\bf k'} u^*_{\\bf k'} u_{\\bf k}\n",
+        "$$\n",
+        "\n",
+        "총 에너지는 다음과 같다. \n",
+        "$$\n",
+        "E = 2\\sum_\\mathbf k\\epsilon_\\mathbf k |v_\\mathbf k|^2  -\n",
+        "g^2\\sum_{\\bf k',k}v^*_\\mathbf k v_{\\bf k'} u^*_{\\bf k'} u_{\\bf k}\\\\\n",
+        "= 2\\sum_\\mathbf k\\epsilon_\\mathbf k\\left( |v_\\mathbf k|^2 -|u_\\mathbf k|^2 -1\\right)\n",
+        "-g^2\\sum_{\\bf k',k}v^*_\\mathbf k v_{\\bf k'} u^*_{\\bf k'} u_{\\bf k}\n",
+        "$$  \n",
+        "\n",
+        "$u, v$를 독립 변수로 두고 다음의 두가지 constraint를 고려하여 E를 최소화하는 조건을 찾는다.  \n",
+        "$$\n",
+        "|u_\\mathbf k|^2 + |v_\\mathbf k|^2 = 1\\\\\n",
+        "N = \\sum_\\mathbf k \\left( |v_\\mathbf k|^2 -|u_\\mathbf k|^2 -1\\right)\n",
+        "$$\n",
+        "Lagrangian multiplier로서 $E_\\mathbf k$와 $-\\mu$를 도입하면,\n",
+        "$$\n",
+        "{\\partial E\\over\\partial u_\\mathbf k} - \\mu{\\partial N\\over\\partial u_\\mathbf k}+E_\\mathbf k u^*_\\mathbf k = 0\\\\\n",
+        "{\\partial E\\over\\partial v_\\mathbf k} - \\mu{\\partial N\\over\\partial v_\\mathbf k}+E_\\mathbf k v^*_\\mathbf k = 0\n",
+        "$$"
       ],
       "metadata": {
         "id": "SMH70EFLRjzX"
