Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -780,7 +780,7 @@
         "H = \\sum_{\\bf k,\\sigma}\\epsilon_\\mathbf k c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}\n",
         "-g^2\\sum_{\\bf k', k}\n",
         "c^\\dagger_{\\bf k'\\uparrow}c^\\dagger_{-\\bf k'\\downarrow}\n",
-        "c_{\\bf k\\uparrow}c_{-\\bf k\\downarrow}\n",
+        "c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow}\n",
         "$$\n",
         "\n",
         "BCS wave function의 에너지는 다음을 계산하면 된다.\n",
@@ -794,10 +794,31 @@
         "$$\n",
         "\n",
         "두번째 interaction 항은 다음과 같다.  \n",
-        "$$\\langle\n",
-        "c^\\dagger_{\\bf k'\\uparrow}c^\\dagger_{-\\bf k'\\downarrow}\n",
-        "c_{\\bf k\\uparrow}c_{-\\bf k\\downarrow} \\rangle = \n",
-        "v^*_\\mathbf k v_{\\bf k'} u^*_{\\bf k'} u_{\\bf k}\n",
+        "$$\\begin{align*}\n",
+        "\\langle \n",
+        "&c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\n",
+        "c_{-\\bf k'\\downarrow}c_{\\bf k'\\uparrow} \\rangle = \\langle\\Psi_\\text{BCS}|P^\\dagger_{\\bf k}\n",
+        "P_{\\bf k'}|\\Psi_\\text{BCS}\\rangle\\\\\n",
+        "&=\\langle0|\\prod_{\\bf k_2}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\n",
+        "P^\\dagger_{\\bf k}\n",
+        "P_{\\bf k'}\n",
+        "\\prod_{\\bf k_1}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle \\\\\n",
+        "&=\\langle0|\\prod_{\\bf k_2\\neq k,k'}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\\\\\n",
+        "&\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
+        "(u^*_{\\bf k'}+v^*_{\\bf k'}P_{\\bf k'})\n",
+        "P^\\dagger_{\\bf k}\n",
+        "P_{\\bf k'}(u_{\\bf k}+v_{\\bf k}P^\\dagger_{\\bf k})\n",
+        "(u_{\\bf k'}+v_{\\bf k'}P^\\dagger_{\\bf k'}) \\\\\n",
+        "&\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
+        "&=\\langle0|\\prod_{\\bf k_2\\neq k,k'}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\\\\\n",
+        "&\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
+        "(u^*_{\\bf k'}+v^*_{\\bf k'}P_{\\bf k'})\n",
+        "P^\\dagger_{\\bf k}\n",
+        "u_{\\bf k}\n",
+        "v_{\\bf k'} \\\\\n",
+        "&\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
+        "&= v^*_\\mathbf k  u^*_{\\bf k'} u_{\\bf k}v_{\\bf k'}= v^*_\\mathbf k v_{\\bf k'}u^*_{\\bf k'} u_{\\bf k}\n",
+        "\\end{align*}\n",
         "$$\n",
         "\n",
         "총 에너지는 다음과 같다. \n",
@@ -816,8 +837,59 @@
         "Lagrangian multiplier로서 $E_\\mathbf k$와 $-\\mu$를 도입하면,\n",
         "$$\n",
         "{\\partial E\\over\\partial u_\\mathbf k} - \\mu{\\partial N\\over\\partial u_\\mathbf k}+E_\\mathbf k u^*_\\mathbf k = 0\\\\\n",
-        "{\\partial E\\over\\partial v_\\mathbf k} - \\mu{\\partial N\\over\\partial v_\\mathbf k}+E_\\mathbf k v^*_\\mathbf k = 0\n",
-        "$$"
+        "{\\partial E\\over\\partial v_\\mathbf k} - \\mu{\\partial N\\over\\partial v_\\mathbf k}+E_\\mathbf k v^*_\\mathbf k = 0.\n",
+        "$$\n",
+        "다음과 같이 $\\Delta$를 정의할 때,\n",
+        "$$\n",
+        "\\Delta \\equiv g^2\\sum_{\\bf k} u^*_{\\bf k}v_{\\bf k}\\tag{6.55}\n",
+        "$$\n",
+        "다음의 연립방정식으로 부터,\n",
+        "$$\n",
+        "\\begin{pmatrix}\n",
+        "\\epsilon_{\\bf k}-\\mu & \\Delta\\\\ \n",
+        "\\Delta^* & -(\\epsilon_{\\bf k}-\\mu)\n",
+        "\\end{pmatrix}\n",
+        "\\begin{pmatrix}\n",
+        "u^*_{\\bf k}\\\\ \n",
+        "v^*_{\\bf k}\n",
+        "\\end{pmatrix} = E_{\\bf k}\n",
+        "\\begin{pmatrix}\n",
+        "u^*_{\\bf k}\\\\ \n",
+        "v^*_{\\bf k}\n",
+        "\\end{pmatrix} $$\n",
+        "\n",
+        "BCS wave function의 에너지 eigenvalue를 얻을 수 있다.  \n",
+        "\n",
+        "$$ E_{\\bf k} = \\pm\\sqrt{(\\epsilon_{\\bf k}-\\mu)^2 + |\\Delta|^2} $$\n",
+        "\n",
+        "이 eigenvalue와 eigenvector로 부터 다음의 값을 구할 수 있다. \n",
+        "$$\n",
+        "u^*_{\\bf k}v_{\\bf k} = {\\Delta\\over 2E_{\\bf k}}\n",
+        "$$\n",
+        "\n",
+        "식(6.55)로부터 **BCS gap equation**은 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "\\Delta = g^2\\sum_{\\bf k} {\\Delta \\over E_{\\bf k}}\n",
+        "$$\n",
+        "\n",
+        "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1]\n",
+        "\n",
+        "$$\n",
+        "\\Delta = \\underbrace{g^2g(\\epsilon_F)}_{\\equiv\\lambda}\n",
+        "\\int_{-\\omega_D}^{\\omega_D}d\\epsilon {\\Delta\\over 2\\sqrt{\\epsilon^2+\\Delta^2}}\\\\\n",
+        "{1\\over\\lambda} = \\sinh^{-1}\\left(\\omega_D\\over\\Delta\\right)\n",
+        "$$\n",
+        "\n",
+        "$\\Delta \\ll \\omega_D$ 이므로, gap은 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "|\\Delta| \\approx 2\\omega_De^{-1/\\lambda}\n",
+        "$$\n",
+        "\n",
+        "[^solyom1]: 다음의 적분식을 이용한다.  \n",
+        "    $$ \\int {dx\\over x^2+a^2}  = \\int {a \\sec^2\\theta d\\theta\\over \\sqrt{a^2\\tan^2\\theta + a^2}}=\\int d\\theta\\sec\\theta\\\\\n",
+        "    =\\log\\left|\\sec\\theta+\\tan\\theta\\right| + C$$\n"
       ],
       "metadata": {
         "id": "SMH70EFLRjzX"
@@ -826,6 +898,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "# Impurities\n"
       ],
       "metadata": {
