Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -552,7 +552,7 @@
         "Fermi level위에 두 전자의 wavefunction을 무게 중심 $\\mathbf R_\\text{cm}=({\\bf r_1+r_2})/2$으로 분리하면 다음과 같다.\n",
         "\n",
         "$$\n",
-        "|\\mathbf r_1\\sigma_1, \\mathbf r_2\\sigma2⟩\n",
+        "\\Psi(\\mathbf r_1, \\mathbf r_2)\n",
         "= e^{-i\\mathbf k_\\text{cm}\\cdot\\mathbf R_\\text{cm}}\\varphi({\\bf r_1-r_2})|\\sigma_1\\sigma_2\\rangle\n",
         "$$ \n",
         "\n",
@@ -570,7 +570,7 @@
         "$$\n",
         "BCS theory에서는 spin singlet을 가정한다.  \n",
         "전자의 fermion 조건으로부터,\n",
-        "$$|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = -|\\mathbf r_2\\sigma_2,\\mathbf r_1\\sigma_1\\rangle\n",
+        "$$\\Psi(\\mathbf r_1, \\mathbf r_2) = -\\Psi(\\mathbf r_2, \\mathbf r_1)\n",
         "$$ \n",
         "\n",
         "spin이 singlet(antisymmetry)일 경우, 위치는 symmetry가 되어서 더 낮은 ground state energy를 갖기 때문이다.  \n",
@@ -589,15 +589,15 @@
         "Fermi sea는 모두 가득차 있는 것을 가정하므로, 이 때의 합계에는 $|\\mathbf k| > k_F$의 조건이 있다.  \n",
         "(수식에서는 이 조건을 편의상 생략한다.)  \n",
         "\n",
-        "여기서 $\\psi_\\mathbf k(\\mathbf r) \\equiv e^{i\\bf k\\cdot r}/\\sqrt 2$ 로 정의하면, 전체의 pair wavefunction은 다음과 같다.  \n",
+        "전체의 pair wavefunction은 다음과 같다.  \n",
         "$$\n",
-        "|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = \n",
-        "\\sum_{\\bf k} \\varphi_\\mathbf k |\\mathbf k\\rangle\\\\\n",
-        "|\\mathbf k\\rangle \\equiv\n",
-        "\\begin{vmatrix}\n",
-        "\\psi_{\\bf k\\uparrow}(\\mathbf r_1) & \\psi_{\\bf k\\downarrow}(\\mathbf r_2)\\\\ \n",
-        "\\psi_{-\\bf k\\uparrow}(\\mathbf r_1) & \\psi_{-\\bf k\\downarrow}(\\mathbf r_2)\n",
-        "\\end{vmatrix}\n",
+        "\\Psi(\\mathbf r_1, \\mathbf r_2) = \n",
+        "\\sum_{\\bf k} \\varphi_\\mathbf k e^{i\\mathbf k(\\mathbf r_1-\\mathbf r_2)} {1\\over\\sqrt 2}(\\left|\\uparrow\\right\\rangle_1\\left|\\downarrow\\right\\rangle_2 - \\left|\\downarrow\\right\\rangle_1\\left|\\uparrow\\right\\rangle_2)\n",
+        "$$\n",
+        "\n",
+        "복잡한 1,2 index 대신에 second quantization form으로 표기하면 다음과 같다.[^solyom3] \n",
+        "$$\n",
+        "|\\Psi\\rangle = \\sum_{\\bf k}\\varphi_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}|0\\rangle\n",
         "$$\n",
         "\n",
         "두 electron의 $\\mathbf k$는 Fermi surface근처에 있으므로, Effective potential을 다음과 같이 근사한다.\n",
@@ -617,10 +617,10 @@
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\n",
         "$$\n",
         " \n",
-        "$|\\mathbf k\\rangle$는 $H|\\mathbf k\\rangle=E|\\mathbf k\\rangle$의 Scrhodinger 방정식을 만족한다.  \n",
+        "Wave function $|\\Psi\\rangle$는 $H|\\Psi\\rangle=E|\\Psi\\rangle$의 Scrhodinger 방정식을 만족한다. Schrodinger 방정식 왼쪽에 $c^\\dagger_{\\bf k}c^\\dagger_{-\\bf k}|0\\rangle$를 곱하면  \n",
         "\n",
         "$$\n",
-        "\\langle\\mathbf k| H|\\mathbf r_1\\sigma_1,\\mathbf r_2\\sigma_2\\rangle = \n",
+        "\\langle0|c_{-\\bf k}c_{\\bf k} H|\\Psi\\rangle = \n",
         "E\\varphi_\\mathbf k\n",
         "=2\\epsilon_\\mathbf k\\varphi_\\mathbf k - g^2\\sum_{\\bf k'}\\varphi_{\\mathbf k'}\n",
         "\\tag{6.18}\n",
@@ -652,16 +652,16 @@
         "$\\epsilon$을 0부터 적분하는 이유는, $\\epsilon_\\mathbf k$를 Fermi energy $\\epsilon_F$와의 차이만큼만 계산하기 때문이다.   \n",
         "적분을 수행하고 이것을 E에 대해 풀면 다음과 같다.  \n",
         "$$\n",
-        "E = -2\\hbar\\omega_De^{-1/\\lambda}\n",
+        "E = -2\\hbar\\omega_De^{-1/\\Lambda}\n",
         "$$\n",
         "\n",
-        "여기서 $\\lambda$는 electron-phonon coupling parameter라고 불리며 다음과 같이 정의된다.\n",
+        "여기서 $\\Lambda$는 electron-phonon coupling parameter라고 불리며 다음과 같이 정의된다.\n",
         "\n",
         "$$\n",
-        "\\lambda \\equiv g^2g(\\epsilon_F)\n",
+        "\\Lambda \\equiv g^2g(\\epsilon_F)\n",
         "$$\n",
         "\n",
-        "$\\lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  \n",
+        "$\\Lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  \n",
         "\n",
         "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett2]  \n",
         "\n",
@@ -677,7 +677,8 @@
         "    A detailed analysis reveals that to be non-vanishing, the nondiagonal elements of the interaction matrix should satisfy two conditions.\n",
         "\n",
         "[^Annett]: Superconductivity, Superfluids, and Condensates - Annett\n",
-        "[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett"
+        "[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett\n",
+        "[^solyom3]: Fundamentals of the Physics of Solids Volume 3 Normal, Broken-Symmetry, and Correlated Systems - Sólyom (34.1.4)"
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
@@ -873,23 +874,27 @@
         "\\Delta = g^2\\sum_{\\bf k} {\\Delta \\over E_{\\bf k}}\n",
         "$$\n",
         "\n",
-        "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1]\n",
+        "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1] [^solyom2]\n",
         "\n",
         "$$\n",
-        "\\Delta = \\underbrace{g^2g(\\epsilon_F)}_{\\equiv\\lambda}\n",
+        "\\Delta = \\underbrace{g^2g(\\epsilon_F)}_{\\equiv\\Lambda}\n",
         "\\int_{-\\omega_D}^{\\omega_D}d\\epsilon {\\Delta\\over 2\\sqrt{\\epsilon^2+\\Delta^2}}\\\\\n",
-        "{1\\over\\lambda} = \\sinh^{-1}\\left(\\omega_D\\over\\Delta\\right)\n",
+        "{1\\over\\Lambda} = \\sinh^{-1}\\left(\\omega_D\\over\\Delta\\right)\n",
         "$$\n",
         "\n",
         "$\\Delta \\ll \\omega_D$ 이므로, gap은 다음과 같다.\n",
         "\n",
         "$$\n",
-        "|\\Delta| \\approx 2\\omega_De^{-1/\\lambda}\n",
+        "|\\Delta| \\approx 2\\omega_De^{-1/\\Lambda}\n",
         "$$\n",
         "\n",
-        "[^solyom1]: 다음의 적분식을 이용한다.  \n",
-        "    $$ \\int {dx\\over x^2+a^2}  = \\int {a \\sec^2\\theta d\\theta\\over \\sqrt{a^2\\tan^2\\theta + a^2}}=\\int d\\theta\\sec\\theta\\\\\n",
-        "    =\\log\\left|\\sec\\theta+\\tan\\theta\\right| + C$$\n"
+        "[^solyom1]: density of state $g(\\epsilon)$은 spin 1개에 대해서만 계산한 것으로 간주한다.  \n",
+        "   Since there is no summation over the spin, only half of the density of states $\\rho(\\epsilon)$ should be taken.  \n",
+        "\n",
+        "[^solyom2]: 다음의 적분식을 이용한다.  \n",
+        "    $$ \\int {dx\\over x^2+a^2}  = \\int {a \\sec^2\\theta d\\theta\\over \\sqrt{a^2\\tan^2\\theta + a^2}}=\\int d\\theta\\sec\\theta$$\n",
+        "    $$ =\\log\\left|\\tan\\theta+\\sec\\theta\\right| \n",
+        "    = \\log\\left|{x\\over a}+\\sqrt{\\left(x\\over a\\right)^2+1}\\right|$$\n"
       ],
       "metadata": {
         "id": "SMH70EFLRjzX"
