Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -888,6 +888,8 @@
         "|\\Delta| \\approx 2\\omega_De^{-1/\\Lambda}\n",
         "$$\n",
         "\n",
+        "이 결과는 두 개의 전자로 이루어진 Cooper pair의 계산과 동일하다.  \n",
+        "\n",
         "[^solyom1]: density of state $g(\\epsilon)$은 spin 1개에 대해서만 계산한 것으로 간주한다.  \n",
         "   Since there is no summation over the spin, only half of the density of states $\\rho(\\epsilon)$ should be taken.  \n",
         "\n",
@@ -898,6 +900,36 @@
       ],
       "metadata": {
         "id": "SMH70EFLRjzX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# BCS engergy gap and quasiparticle states (Bologon)\n",
+        "\n",
+        "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "|\\Psi^{(1)}\\rangle = \n",
+        "\\left(u^*_{\\mathbf k_1}P^\\dagger_{\\mathbf k_1}-v^*_{\\mathbf k_1} \\right)\n",
+        "\\prod_{\\mathbf k\\neq\\mathbf k_1}\\left(u_{\\mathbf k}+v_{\\mathbf k}P^\\dagger_{\\mathbf k} \\right) |0\\rangle\n",
+        "$$\n",
+        "\n",
+        "$\\left(u^*_{\\mathbf k}P^\\dagger_{\\mathbf k}-v^*_{\\mathbf k} \\right)|0\\rangle$ 와 $\\left(u_{\\mathbf k}+v_{\\mathbf k}P^\\dagger_{\\mathbf k} \\right)|0\\rangle$는 서로 orthogonal하므로, exited state와 BCS ground state역시 orthogonal하다.\n",
+        "\n",
+        "$$ \\langle\\Psi_\\text{BCS}|\\Psi^{(1)}\\rangle = 0 $$\n",
+        "\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \n",
+        "\\approx\n",
+        "\\langle c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\rangle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} +\n",
+        "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \\rangle\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "vNMPoB8m6MB_"
       }
     },
     {
