Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -907,6 +907,26 @@
       "source": [
         "# BCS engergy gap and quasiparticle states (Bologon)\n",
         "\n",
+        "Hamiltonian의 interaction term은 다음과 같다.  \n",
+        "$$\n",
+        "c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow}\n",
+        "c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\downarrow} = P^\\dagger_{\\mathbf k} P_{\\mathbf k'}\n",
+        "$$\n",
+        "\n",
+        "이것을 평균에 대한 상대값으로 나눈다.  \n",
+        "$$\n",
+        "P^\\dagger_{\\mathbf k} = \\langle P^\\dagger_{\\mathbf k}\\rangle + \\underbrace{P^\\dagger_{\\mathbf k}-\\langle P^\\dagger_{\\mathbf k}\\rangle}_{\\equiv\\delta}\n",
+        "$$\n",
+        "\n",
+        "Interaction term에서 $\\delta^2$을 무시하면 다음과 같다. [^Avoras]  \n",
+        "\n",
+        "$$\n",
+        "P^\\dagger_{\\mathbf k} P_{\\mathbf k'} = \\underbrace{-\\langle P^\\dagger_{\\mathbf k}\\rangle\\langle P_{\\mathbf k'}\\rangle}_\\text{energy shift} + \n",
+        "\\underbrace{\\langle P_{\\mathbf k'}\\rangle P^\\dagger_{\\mathbf k}  +\n",
+        "\\langle P^\\dagger_{\\mathbf k}\\rangle P_{\\mathbf k'} }_\\text{keep this} +\n",
+        "\\underbrace{\\delta\\delta}_\\text{neglect this}\n",
+        "$$\n",
+        "\n",
         "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
         "\n",
         "$$\n",
@@ -926,7 +946,9 @@
         "\\approx\n",
         "\\langle c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\rangle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} +\n",
         "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \\rangle\n",
-        "$$"
+        "$$\n",
+        "\n",
+        "[^Avoras]: Lecture Notes on Superconductivity - Arovas"
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
