Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -744,6 +744,8 @@
         "\\left(u_\\mathbf k+v_\\mathbf kP^\\dagger_\\mathbf k\\right)\n",
         "|0\\rangle $$\n",
         "\n",
+        "Shriefer는 일리노이 대학의 대학원생이던 1957년 겨울, 뉴욕 지하철을 타고가면서 위의 wave function에 대한 아이디어를 떠올렸다고 한다. [^Arovas2]\n",
+        "\n",
         "이제 $v_\\mathbf k$의 의미를 알 수 있다.   \n",
         "Spin up인 전자의 갯수를 구하면,\n",
         "$$\n",
@@ -764,7 +766,8 @@
         "$$\n",
         "\\langle N\\rangle = 2 \\sum_\\mathbf k |v_\\mathbf k|^2\n",
         "$$\n",
-        "\n"
+        "\n",
+        "[^Arovas2]: Lecture Notes on Superconductivity - Arovas\n"
       ],
       "metadata": {
         "id": "CXDjJH_ARg5A"
@@ -924,8 +927,40 @@
         "P^\\dagger_{\\mathbf k} P_{\\mathbf k'} = \\underbrace{-\\langle P^\\dagger_{\\mathbf k}\\rangle\\langle P_{\\mathbf k'}\\rangle}_\\text{energy shift} + \n",
         "\\underbrace{\\langle P_{\\mathbf k'}\\rangle P^\\dagger_{\\mathbf k}  +\n",
         "\\langle P^\\dagger_{\\mathbf k}\\rangle P_{\\mathbf k'} }_\\text{keep this} +\n",
-        "\\underbrace{\\delta\\delta}_\\text{neglect this}\n",
+        "\\underbrace{\\delta^2}_\\text{drop this!}\n",
         "$$\n",
+        "\n",
+        "첫번째 energy shift 항은 interaction이 없는 에너지의 증감을 나타낸다. \n",
+        "두번째 항을 이용한 interaction Hamiltonian은 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "-g^2\\sum_{\\bf k, k'}\\left(\\langle  c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\rangle c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\langle c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow}\\rangle c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\n",
+        "\\right)  = \n",
+        "-\\sum_{\\bf k}\\left(\\Delta^*c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\Delta c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\right)\n",
+        "$$\n",
+        "\n",
+        "위의 식을 이용한 reduced Hamiltonian은 다음과 같다. \n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "H &= \\sum_{\\mathbf k,\\sigma} \\epsilon_\\mathbf k c^\\dagger_{\\mathbf k, \\sigma}c_{\\mathbf k, \\sigma} -\\sum_{\\bf k}\\left(\\Delta^*c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\Delta c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\right) -\\mu N \\\\\n",
+        "&=\\sum_\\mathbf k\n",
+        "\\begin{pmatrix}\n",
+        " c^\\dagger_{\\bf k\\uparrow} &  c_{-\\bf k\\downarrow}\n",
+        "\\end{pmatrix}\n",
+        "\\begin{pmatrix}\n",
+        "\\epsilon_\\mathbf k -\\mu& -\\Delta \\\\ \n",
+        "-\\Delta^* & -(\\epsilon_\\mathbf k -\\mu) \n",
+        "\\end{pmatrix}\n",
+        "\\begin{pmatrix}\n",
+        " c_{\\bf k\\uparrow} \\\\\n",
+        " c^\\dagger_{-\\bf k\\downarrow}\n",
+        "\\end{pmatrix}\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^Arovas2] [^solyom]  \n",
+        "원래 Hamiltonian이 $c^\\dagger, c$에 대한 4차 interaction인데 비해서 reduced Hamiltonian은 2차항만을 포함하고 있다. \n",
         "\n",
         "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
         "\n",
@@ -939,8 +974,6 @@
         "\n",
         "$$ \\langle\\Psi_\\text{BCS}|\\Psi^{(1)}\\rangle = 0 $$\n",
         "\n",
-        "\n",
-        "\n",
         "$$\n",
         "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \n",
         "\\approx\n",
@@ -948,7 +981,9 @@
         "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \\rangle\n",
         "$$\n",
         "\n",
-        "[^Avoras]: Lecture Notes on Superconductivity - Arovas"
+        "[^Avoras]: Lecture Notes on Superconductivity - Arovas  \n",
+        "[^Avoras2]: Lecture Notes on Superconductivity - Arovas  \n",
+        "[^solyom]: Fundamentals of the Physics of Solids Volume 3 Normal, Broken-Symmetry, and Correlated Systems - Sólyom (34.2.15)"
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
