--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -921,7 +921,7 @@
         "P^\\dagger_{\\mathbf k} = \\langle P^\\dagger_{\\mathbf k}\\rangle + \\underbrace{P^\\dagger_{\\mathbf k}-\\langle P^\\dagger_{\\mathbf k}\\rangle}_{\\equiv\\delta}\n",
         "$$\n",
         "\n",
-        "Interaction term에서 $\\delta^2$을 무시하면 다음과 같다. [^Avoras]  \n",
+        "Interaction term에서 $\\delta^2$을 무시하면 다음과 같다. [^Arovas]  \n",
         "\n",
         "$$\n",
         "P^\\dagger_{\\mathbf k} P_{\\mathbf k'} = \\underbrace{-\\langle P^\\dagger_{\\mathbf k}\\rangle\\langle P_{\\mathbf k'}\\rangle}_\\text{energy shift} + \n",
@@ -959,7 +959,7 @@
         "\\end{aligned}\n",
         "$$\n",
         "\n",
-        "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^Arovas3] [^solyom]  \n",
+        "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^Arovas2] [^solyom]  \n",
         "원래 Hamiltonian이 $c^\\dagger, c$에 대한 4차 interaction인데 비해서 reduced Hamiltonian은 2차항만을 포함하고 있다. \n",
         "\n",
         "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
@@ -981,9 +981,11 @@
         "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow} \\langle c_{-\\bf k\\downarrow}c_{\\bf k\\uparrow} \\rangle\n",
         "$$\n",
         "\n",
-        "[^Avoras]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^Avoras3]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^solyom]: Fundamentals of the Physics of Solids Volume 3 Normal, Broken-Symmetry, and Correlated Systems - Sólyom (34.2.15)"
+        "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
+        "[^Arovas2]: Lecture Notes on Superconductivity - Arovas  \n",
+        "[^solyom]: Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian $$\n",
+        "H'_\\text{BCS} = H_\\text{BCS} +\\mu \\tag{34.2.15} N \n",
+        "$$ has to be considered instead of $H_\\text{BCS}$."
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
