Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -983,9 +983,9 @@
         "\n",
         "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
         "[^Arovas2]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^solyom]: Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian $$\n",
-        "H'_\\text{BCS} = H_\\text{BCS} +\\mu \\tag{34.2.15} N \n",
-        "$$ has to be considered instead of $H_\\text{BCS}$."
+        "[^solyom]: Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian \n",
+        "    $$ H'_\\text{BCS} = H_\\text{BCS} +\\mu \\tag{34.2.15} N $$  \n",
+        "    has to be considered instead of $H_\\text{BCS}$.  "
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
