Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -959,7 +959,7 @@
         "\\end{aligned}\n",
         "$$\n",
         "\n",
-        "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^Arovas2] [^solyom]  \n",
+        "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^solyom]  \n",
         "원래 Hamiltonian이 $c^\\dagger, c$에 대한 4차 interaction인데 비해서 reduced Hamiltonian은 2차항만을 포함하고 있다. \n",
         "\n",
         "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
@@ -982,10 +982,7 @@
         "$$\n",
         "\n",
         "[^Arovas]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^Arovas2]: Lecture Notes on Superconductivity - Arovas  \n",
-        "[^solyom]: Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian \n",
-        "    $$ H'_\\text{BCS} = H_\\text{BCS} +\\mu \\tag{34.2.15} N $$  \n",
-        "    has to be considered instead of $H_\\text{BCS}$.  "
+        "[^solyom]: Arovas, Sólyom - Since the particle number is not fixed in the BCS theory, we work with a grand canonical ensemble and the Hamiltonian  $H'_\\text{BCS} = H_\\text{BCS} - \\mu  N \\tag{34.2.15}$ has to be considered instead of $H_\\text{BCS}$.  "
       ],
       "metadata": {
         "id": "vNMPoB8m6MB_"
