--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -860,7 +860,7 @@
         "\\begin{pmatrix}\n",
         "u^*_{\\bf k}\\\\ \n",
         "v^*_{\\bf k}\n",
-        "\\end{pmatrix} $$\n",
+        "\\end{pmatrix} \\tag{6.57}$$\n",
         "\n",
         "BCS wave function의 에너지 eigenvalue를 얻을 수 있다.  \n",
         "\n",
@@ -930,8 +930,8 @@
         "\\underbrace{\\delta^2}_\\text{drop this!}\n",
         "$$\n",
         "\n",
-        "첫번째 energy shift 항은 interaction이 없는 에너지의 증감을 나타낸다. \n",
-        "두번째 항을 이용한 interaction Hamiltonian은 다음과 같다.\n",
+        "첫번째 energy shift 항은 interaction이 없는 에너지의 증감을 나타낸다.  \n",
+        "두번째 항을 이용한 interaction Hamiltonian은 다음과 같다.  \n",
         "\n",
         "$$\n",
         "-g^2\\sum_{\\bf k, k'}\\left(\\langle  c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\rangle c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\langle c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow}\\rangle c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\n",
@@ -943,7 +943,7 @@
         "\n",
         "$$\n",
         "\\begin{aligned}\n",
-        "H &= \\sum_{\\mathbf k,\\sigma} \\epsilon_\\mathbf k c^\\dagger_{\\mathbf k, \\sigma}c_{\\mathbf k, \\sigma} -\\sum_{\\bf k}\\left(\\Delta^*c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\Delta c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\right) -\\mu N \\\\\n",
+        "H &= \\sum_{\\mathbf k,\\sigma} \\epsilon_\\mathbf k c^\\dagger_{\\mathbf k, \\sigma}c_{\\mathbf k, \\sigma} -\\sum_{\\bf k}\\left(\\Delta^*c^\\dagger_{\\mathbf k\\uparrow}c^\\dagger_{-\\mathbf k\\downarrow} + \\Delta c_{-\\mathbf k'\\downarrow}c_{\\mathbf k'\\uparrow}\\right) +\\underbrace{\\text{ constant }}_\\text{neglect energy shift} -\\mu N \\\\\n",
         "&=\\sum_\\mathbf k\n",
         "\\begin{pmatrix}\n",
         " c^\\dagger_{\\bf k\\uparrow} &  c_{-\\bf k\\downarrow}\n",
@@ -961,6 +961,63 @@
         "\n",
         "마지막에 추가된  $-\\mu N=-\\mu\\sum_{\\bf k,\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k\\sigma}$은 interaction term이 총 pair number를 보존하지 않기 때문에 추가된 chemical potential 항이다. [^solyom]  \n",
         "원래 Hamiltonian이 $c^\\dagger, c$에 대한 4차 interaction인데 비해서 reduced Hamiltonian은 2차항만을 포함하고 있다. \n",
+        "\n",
+        "이것은 Bogoliubov transformaion을 통하여 대각화 할 수 있다.  \n",
+        "\n",
+        "$$\n",
+        "H = \\sum_\\mathbf k\n",
+        "\\begin{pmatrix}\n",
+        " b^\\dagger_{\\bf k\\uparrow} &  b_{-\\bf k\\downarrow}\n",
+        "\\end{pmatrix}\n",
+        "\\begin{pmatrix}\n",
+        "E_\\mathbf k & 0 \\\\ \n",
+        "0 & -E_\\mathbf k \n",
+        "\\end{pmatrix}\n",
+        "\\begin{pmatrix}\n",
+        " b_{\\bf k\\uparrow} \\\\\n",
+        " b^\\dagger_{-\\bf k\\downarrow}\n",
+        "\\end{pmatrix}\n",
+        "$$\n",
+        "\n",
+        "이 Eigenvector를 bogolon이라고 부르며 다음과 같이 정의 된다.  \n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "b_{\\bf k\\uparrow} = u_{\\bf k}c_{\\bf k\\uparrow}-v_{\\bf k}c^\\dagger_{\\bf -k\\downarrow}\\\\\n",
+        "b^\\dagger_{-\\bf k\\uparrow} = v^*_{\\bf k}c_{\\bf k\\uparrow}+u^*_{\\bf k}c^\\dagger_{\\bf -k\\downarrow}\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "식 (6.57}로부터 $|u_{\\bf k}|^2$과 $|v_{\\bf k}|^2$을 얻어서 그래프로 그려보면 다음과 같다.\n",
+        "\n",
+        "![https://imgur.com/8wljkD7](https://i.imgur.com/8wljkD7.png)\n",
+        "\n",
+        "$\\mathbf k$가 작을 때에는 $v\\approx 1$이므로 $v$는 electron과 같고, 반대로 $u$는 hole과 같다. Bologon은 $u$와 $v$가 mix되어 있으므로 electron과 hole이 mix된 quasiparticle state이고 fermion의 anti-commutation relation을 따른다. 또한,\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "b_{\\bf k\\uparrow}|\\Psi_\\text{BCS}\\rangle = 0\\\\\n",
+        "b_{-\\bf k\\downarrow}|\\Psi_\\text{BCS}\\rangle = 0\n",
+        "\\end{aligned}\n",
+        "$$ \n",
+        "이므로 BCS ground state에서 bologon은 존재하지 않는다. \n",
+        "\n",
+        "온도가 높아질 경우 bologon은 Fermi-Dirac distribution인 $f(E) = 1/(e^{\\beta E}+1)$을 따를 것이다. \n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "\\langle b^\\dagger_{\\bf k\\uparrow}b_{\\bf k\\uparrow}\\rangle &= f(E_{\\bf k})\\\\\n",
+        "\\langle b_{-\\bf k\\downarrow}b^\\dagger_{-\\bf k\\downarrow}\\rangle &= \\langle 1 - b^\\dagger_{-\\bf k\\downarrow}b_{-\\bf k\\downarrow}\\rangle = 1-f(E_{\\bf k})\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "Ground state로부터 하나의 Cooper pair $(\\mathbf k_1\\uparrow, -\\mathbf k_1\\downarrow)$ 가 excite된 state는 다음과 같다.\n",
         "\n",
